[project]
name = "zoleotracker"
version = "0.1.0"
description = ""
authors = [{ name = "Brett Angelo", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.3,<3",
    "extract-msg>=0.42.1,<0.43",
    "html2text==2020.1.16",
    "slackclient>=2.9.4,<3",
    "requests>=2.34.2,<3",
]

[project.scripts]
zoleotracker = "zoleotracker.zoleotracker:start"

[dependency-groups]
dev = [
    "pytest>=7.4,<10.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
